@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/12/2016
+  * changed eventLookupClientEI to use new EI client
+
 * 1/11/2016
   * changed killJob so that 51 goes forward even if commandToPilot was already set
 
